--- a/EcommSimpleShop/EcommSimpleShop.csproj
+++ b/EcommSimpleShop/EcommSimpleShop.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Core.Flash" Version="2.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.4" />
